# spotify_vibe_app

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
spotify_vibe/: __init__.py  cli.py  config.py  interactive.py
spotify_vibe/services/: llm_service.py  spotify_service.py
spotify_vibe/utils/: __init__.py  helpers.py  logging_config.py
tests/: __init__.py
vibe_coder/: __init__.py  cli.py  models.py
vibe_coder/services/: llm_service.py  spotify_service.py
vibe_coder/utils/: __init__.py  helpers.py  logging_config.py
