[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vibe-coder"
version = "0.1.0"
description = "AI-powered Spotify playlist generator using open-source LLMs."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Visva Murali" }]
dependencies = []

[project.optional-dependencies]
dev = [
  "black",
  "ruff",
  "mypy",
  "pytest",
  "pytest-cov",
  "pytest-mock",
  "responses",
  "pre-commit",
]

[project.scripts]
spotify-vibe = "spotify_vibe.cli:app"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
extend-select = ["I"]
fix = true
target-version = "py311"
src = ["spotify_vibe"]
exclude = [".venv", "venv", ".git", ".pytest_cache", "build", "dist"]

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
show_error_codes = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["-ra", "-q", "--cov=spotify_vibe", "--cov-report=term-missing"]
