[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spotify-vibe"
version = "0.1.0"
description = "AI-powered Spotify playlist generator using open-source LLMs"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Visvajit Murali", email = "visvajitm@gmail.com"}
]
license = {text = "MIT"}
keywords = ["spotify", "ai", "music", "playlist", "llm", "groq", "ollama"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "spotipy==2.24.0",
    "groq==0.4.2",
    "pydantic==2.9.2",
    "pydantic-settings==2.5.2",
    "python-dotenv==1.0.1",
    "httpx==0.27.2",
    "tenacity==8.5.0",
    "click==8.1.7",
    "typer==0.12.5",
    "rich==13.9.2",
    "python-json-logger==2.0.7",
    "prompt-toolkit==3.0.48",
    "ollama==0.1.8",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.3",
    "pytest-cov==6.0.0",
    "pytest-mock==3.14.0",
    "responses==0.25.3",
    "black==24.10.0",
    "ruff==0.7.0",
    "mypy==1.12.0",
    "pre-commit==4.0.1",
]

[project.urls]
Homepage = "https://github.com/visvamurali/spotify-vibe"
Repository = "https://github.com/visvamurali/spotify-vibe"
Issues = "https://github.com/visvamurali/spotify-vibe/issues"

[project.scripts]
spotify-vibe = "spotify_vibe.interactive:main"

[tool.setuptools]
packages = ["spotify_vibe", "spotify_vibe.services", "spotify_vibe.utils"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312", "py313"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --cov=spotify_vibe --cov-report=term-missing"
